--- a/app.json
+++ b/app.json
@@ -2,5 +2,6 @@
   "name": "Slack New Channel Announcement Bot",
   "description": "A bot that keeps track of new channels and announces them in a channel of your choice!",
   "repository": "https://github.com/chrisfromthelc/slack-new-channel-announcements-bot",
+  "logo": "https://node-js-sample.herokuapp.com/node.svg",
   "keywords": ["slack", "slackbot", "channels"]
 }
